--- a/views/edit-form.ejs
+++ b/views/edit-form.ejs
@@ -8,4 +8,5 @@
 	<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="body"><%= todo.body %></textarea>  
   </div>
   <button type="submit" class="btn btn-outline-primary">Submit</button>
+  <a href="/"><button type="submit" class="btn btn-outline-danger">Cancel</button></a>
 </form>
